# Aletheia

./: .env.example  .gitignore  BLUEPRINT.md  DESIGN.md  QUESTIONS.md  README.md  STAFF_ENGINEER.md  docker-compose.yml  pyproject.toml
app/: db.py  embeddings.py  llm.py  main.py  mcp_client.py  prompts.py  retrieval.py  schemas.py
app/agents/: advocate.py  skeptic.py
db/: init.sql
scripts/: run_phase1.py  run_phase2.py  run_phase3.py
